--- a/codemotion2014/slides.adoc
+++ b/codemotion2014/slides.adoc
@@ -11,7 +11,7 @@ image::intro.png[]
 
 [{caption-off}, crole="band"]
 .Aprender
-image::new.jpg[]
+image::adalearn.jpg[]
 
 == !
 
@@ -32,12 +32,18 @@ Java 8
 * Parallelism
 * Nashorn
 * Utils (*Base64*, *StringJoiner*)
+* JVM
 
 == !
 
 [{caption-off}, crole="band"]
 .Optional
 image::optional.jpg[]
+
+== !
+
+"I call it my billion-dollar mistake. It was the invention of the null reference in 1965."
+-- Tony Hoare, Inventor de la referencia null
 
 [.topic]
 == Optional
@@ -122,6 +128,7 @@ Conference codeMotion = conferenceService.findConferenceByTitle("CodeMotion Madr
 
 //Early Bird es 10 dias antes
 Calendar earlyBirdLimitOld = codeMotion.getEarlyBirdLimit();
+
 assertThat(earlyBirdLimitOld.get(Calendar.YEAR), is(1996));
 assertThat(earlyBirdLimitOld.get(Calendar.MONTH), is(6)); //<1>
 assertThat(earlyBirdLimitOld.get(Calendar.DAY_OF_MONTH), is(27));
@@ -483,8 +490,11 @@ public class Conference {
 .Iterable.java
 ----
 public interface Iterable {
-  default void forEach(Consumer<? super T> action) {}
-}
+  default void forEach(Consumer<? super T> action) {
+    for (T t : this) {
+      action.accept(t);
+    }
+  }
 ----
 
 [source, java]
@@ -502,8 +512,6 @@ public interface Consumer<T> {
 ----
 List<Conference> conferencesToFollow = ...;
 Conference codemotion = new Conference();
-
-//codemotion.accept(Conference s)
 conferencesToFollow.forEach(codemotion::follow);
 ----
 --
@@ -542,7 +550,6 @@ public interface Consumer<T> {
 ----
 List<Session> sessions = ...;
 
-//s.accept(Session s)
 //sessions.forEach(s -> s.finish());
 sessions.forEach(Session::finish);
 ----
@@ -589,20 +596,20 @@ Notifier emailNotifier = Mockito.mock(Notifier); //<1>
 NotifierHandler notifierHandler = new NotifierHandler();
 notifierHandler.emailNotifier = emailNotifier;
 
-Person person1 = new Person();
-person1.setEmail("john@example.com");
-Person person2 = new Person();
-person2.setEmail(null);
+Speaker speaker1 = new Speaker();
+speaker1.setEmail("john@example.com");
+Speaker speaker2 = new Person();
+speaker2.setEmail(null);
 
 Session session = new Session();
-session.addSpeaker(person1);
-session.addSpeaker(person2);
+session.addSpeaker(speaker1);
+session.addSpeaker(speaker2);
 
 boolean result = notifierHandler.notifyEmail(session);
 
 assertThat(result, is(true));
-verify(emailNotifier).notify(person1);
-verify(emailNotifier, never()).notify(person2); //<2>
+verify(emailNotifier).notify(speaker1);
+verify(emailNotifier, never()).notify(speaker2); //<2>
 ----
 <1> O Stubbing
 <2> Verificación de todos los posibles casos
@@ -636,12 +643,14 @@ public interface Notifier {
 .NotifierTestResponses.java
 ----
 public class NotifierTestResponses {
-  public static void assertsEmailNotNull(Person p) {
+  public static void assertsEmailNotNull(Speaker p) {
     assertThat(p.getEmail(), is(notNullValue()));
   }
 }
 ----
 
+[.incremental]
+--
 [source, java]
 .Java 8
 ----
@@ -649,12 +658,13 @@ NotifierHandler notifierHandler = new NotifierHandler();
 notifierHandler.emailNotifier = NotifierTestResponses::assertsEmailNotNull;
 
 Session session = new Session();
-session.addSpeaker(person1);
-session.addSpeaker(person2);
+session.addSpeaker(speaker1);
+session.addSpeaker(speaker2);
 
 boolean result = notifierHandler.notifyEmail(session);
 assertThat(result, is(true));
 ----
+--
 
 [.topic.source]
 == Test
@@ -668,8 +678,8 @@ NotifierHandler notifierHandler = new NotifierHandler();
 notifierHandler.emailNotifier = emailNotifier;
 
 Session session = new Session();
-session.addSpeaker(person1);
-session.addSpeaker(person2);
+session.addSpeaker(speaker1);
+session.addSpeaker(speaker2);
 
 doThrow(IllegalArgumentException.class)
   .when(emailNotifier)
@@ -696,12 +706,14 @@ public interface Notifier {
 .NotifierTestResponses.java
 ----
 public class NotifierTestResponses {
-  public static void throwAnIllegalArgumentException(Person p) {
+  public static void throwAnIllegalArgumentException(Speaker p) {
     throw new IllegalArgumentException();
   }
 }
 ----
 
+[.incremental]
+--
 [source, java]
 .Java 8
 ----
@@ -709,12 +721,13 @@ NotifierHandler notifierHandler = new NotifierHandler();
 notifierHandler.emailNotifier = NotifierTestResponses::throwAnIllegalArgumentException;
 
 Session session = new Session();
-session.addSpeaker(person1);
-session.addSpeaker(person2);
+session.addSpeaker(speaker1);
+session.addSpeaker(speaker2);
 
 boolean result = notifierHandler.notifyEmail(session);
 assertThat(result, is(false));
 ----
+--
 
 [.topic.source]
 == Test
@@ -1006,6 +1019,11 @@ image::conclusions.jpg[]
 == !
 
 [{caption-off}, crole="band"]
+.Java 9
+image::cacauet.jpg[]
+== !
+
+[{caption-off}, crole="band"]
 .github.com/lordofthejars/decks
 image::github.jpg[]
 
@@ -1018,7 +1036,7 @@ icon:twitter[] @alexsotob
 [.topic]
 == Imagenes
 
-* Slide 16 - https://www.flickr.com/photos/luccast85
-* Slide 44 - http://img.movieboom.biz/movie/screen/415/18.jpg
-* Slide 54 - Mine
-* The rest Image Courtesy of Shutterstock
+* Slide 17 - https://www.flickr.com/photos/luccast85
+* Slide 45 - http://img.movieboom.biz/movie/screen/415/18.jpg
+* Slide 3, 55, 56 - @alexsotob
+* Other Images Courtesy of Shutterstock
